--- a/gradle.properties
+++ b/gradle.properties
@@ -4,4 +4,6 @@ snapshot=true
 #
 org.gradle.script.lang.kotlin.accessors.auto=true
 #
-#kotlin.version=1.3.0-rc-116
+kotlin.version=1.3.+
+#
+useCoroutines=true
